# mobilenet_parallelised

BenchmarkTimes/Dynamic_Scheduling/: mobilenet_dynamic_12threads.txt  mobilenet_dynamic_16threads.txt  mobilenet_dynamic_2threads.txt  mobilenet_dynamic_4threads.txt  mobilenet_dynamic_6threads.txt  mobilenet_dynamic_8threads.txt
BenchmarkTimes/Guided_Scheduling/: mobilenet_guided_12threads.txt  mobilenet_guided_16threads.txt  mobilenet_guided_1threads.txt  mobilenet_guided_2threads.txt  mobilenet_guided_4threads.txt  mobilenet_guided_6threads.txt  mobilenet_guided_8threads.txt
BenchmarkTimes/Static_Scheduling/: mobilenet_static_12threads.txt  mobilenet_static_16threads.txt  mobilenet_static_2threads.txt  mobilenet_static_4threads.txt  mobilenet_static_6threads.txt  mobilenet_static_8threads.txt
data/: test_labels.txt  test_list.txt  test_list_1image.txt
mobilenet/: CMakeLists.txt  Network.cpp  Network.h  convLayer.cpp  convLayer.h  layers_ds.h  main.cpp  readdata.cpp  results_analysis.py  utils.cpp  utils.h
